# trackdev-grader

./: .gitignore  Cargo.toml  GRADING.md  README.md  TEST_PLAN.md  claude-refine-plan-v2.md  grader.desktop.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
crates/ai_detect/: Cargo.toml
crates/ai_detect/src/: behavioral.rs  curriculum_check.rs  fusion.rs  lib.rs  stylometry.rs  text_consistency.rs
crates/analyze/: Cargo.toml
crates/analyze/src/: contribution.rs  flags.rs  inequality.rs  lib.rs  metrics.rs  pr_weight.rs  trajectory.rs
crates/analyze/tests/: empty_db_smoke.rs  flag_all_prs_late.rs  flag_approved_broken_pr.rs  flag_architecture_drift.rs  flag_architecture_hotspot.rs  flag_author_mismatch.rs  flag_bulk_rename_pr.rs  flag_carrying_team.rs  flag_complexity_hotspot.rs  flag_contribution_imbalance.rs  flag_cosmetic_heavy_pr.rs  flag_cosmetic_rewrite.rs  flag_cramming.rs  flag_cross_team_similarity.rs  flag_estimation_bias.rs  flag_foreign_merge.rs  flag_ghost_contributor.rs  flag_hidden_contributor.rs  flag_high_compile_failure_rate.rs  flag_last_minute_pr.rs  flag_low_code_high_points.rs  flag_low_composite_score.rs  flag_low_doc_score.rs  flag_low_mutation_score.rs  flag_low_reviews.rs  flag_low_survival_rate.rs  flag_micro_prs.rs  flag_missing_ai_declaration.rs  flag_no_reviews_received.rs  flag_orphan_pr.rs  flag_point_code_mismatch.rs  flag_pr_does_not_compile.rs  flag_raw_normalized_divergence.rs  flag_regularity_declining.rs  flag_single_commit_dump.rs  flag_static_analysis_hotspot.rs  flag_team_inequality.rs  flag_unknown_contributor.rs  flag_zero_tasks.rs  metrics_weighted_pr_lines.rs
crates/architecture/: Cargo.toml
crates/architecture/examples/: smoke_rubric.rs
crates/architecture/src/: ast_rules.rs  attribution.rs  checker.rs  glob.rs  lib.rs  rubric.rs  rules.rs  scanner.rs
crates/architecture/tests/: android_v1_fixtures.rs  spring_v8_fixtures.rs
crates/architecture_llm/: Cargo.toml
crates/architecture_llm/src/: cache.rs  cli_judge.rs  deepseek_judge.rs  judge.rs  lib.rs
crates/architecture_llm/tests/: cache_round_trip.rs
crates/blackbox/: Cargo.toml
crates/blackbox/src/: fixture.rs  lib.rs  runner.rs  snapshot.rs
crates/blackbox/tests/: cross_cutting.rs  t0_infra_smoke.rs  wave_p0.rs  wave_p1.rs  wave_p2.rs
crates/cli/: Cargo.toml
crates/cli/examples/: populate_p2.rs
crates/cli/src/: main.rs
crates/collect/: Cargo.toml
crates/collect/src/: collector.rs  github_client.rs  identity_resolver.rs  lib.rs  pm_client.rs  repo_manager.rs
crates/compile_stage/: Cargo.toml
crates/compile_stage/src/: builder.rs  failure_analysis.rs  lib.rs  pitest.rs
crates/compile_stage/tests/: worktree_smoke.rs
crates/core/: Cargo.toml
crates/core/examples/: smoke_rule_attribution.rs
crates/core/src/: ai_usage.rs  attribution.rs  config.rs  db.rs  error.rs  finding.rs  formatting.rs  java_statements.rs  jitter.rs  lib.rs  paths.rs  rule_attribution.rs  schema.sql  stats.rs  time.rs
crates/curriculum/: Cargo.toml
crates/curriculum/src/: latex_parser.rs  lib.rs  snapshot.rs  template_diff.rs
crates/estimation/: Cargo.toml
crates/estimation/src/: em.rs  lib.rs  persist.rs
crates/evaluate/: Cargo.toml
crates/evaluate/src/: claude_cli_client.rs  cli_rubric.rs  cursor_cli_client.rs  deepseek_client.rs  heuristics.rs  lib.rs  llm_client.rs  llm_eval.rs  llm_trait.rs  prompt.rs
crates/evaluate/tests/: pr_doc_resume_diagnostic.rs
crates/evaluate_local/: Cargo.toml
crates/evaluate_local/src/: config.rs  flags.rs  lib.rs  ollama.rs  persist.rs  pipeline.rs  ridge.rs  triage.rs
crates/evaluate_local/tests/: pipeline_smoke.rs  ridge_dot.rs  short_circuits.rs  triage.rs
crates/grade_core/: Cargo.toml
crates/grade_core/src/: anchor.rs  axes.rs  calibrate.rs  cohort.rs  formula.rs  grade.rs  lib.rs  modulation.rs  policy.rs  shape.rs  spec.rs  types.rs
crates/grade_core/tests/: cohort_norm.rs  emit_grades.rs  reference_fixture.rs
crates/grade_core_wasm/: Cargo.toml
crates/grade_core_wasm/src/: lib.rs
crates/grade_core_wasm/tests/: build_pkg.rs  desktop_verify.rs
crates/grade_xlsx/: Cargo.toml
crates/grade_xlsx/src/: lib.rs
crates/grading_html/: Cargo.toml  SCHEMA_NOTES.md
crates/grading_html/assets/: VENDOR.md  app.css  app.js  engine.js  template.html
crates/grading_html/src/: lib.rs  render.rs  snapshot.rs
crates/grading_html/tests/: engine_parity.rs  parity.mjs  render_golden.rs  snapshot.rs
crates/grading_xlsx/: Cargo.toml  SCHEMA_NOTES.md
crates/grading_xlsx/src/: aggregate.rs  config.rs  data.rs  excel_text.rs  grade.rs  import_weights.rs  labels.rs  lib.rs  modulation.rs  normalize.rs  penalty.rs  persist.rs  weights_layout.rs  workbook.rs
crates/grading_xlsx/tests/: gate_ai_review.rs  grade_model.rs  incremental_merge.rs  llm_flags_golden.rs  workbook_golden.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: calibrate_anchors.rs  db_diff.rs  debug_pr.rs  grade_explain.rs  lib.rs  pipeline.rs  purge.rs  report_sync.rs
crates/orchestration/tests/: grade_diagnostic.rs  grade_md_export.rs  grade_preview.rs  grade_xlsx_export.rs  parity_harness.rs
crates/process_stage/: Cargo.toml
crates/process_stage/src/: collaboration.rs  lib.rs  planning.rs  regularity.rs  temporal.rs
crates/project_inventory/: Cargo.toml
crates/project_inventory/examples/: scan_repo.rs
crates/project_inventory/src/: baseline.rs  catalog.rs  detect.rs  gradle.rs  inventory.rs  lib.rs  metrics.rs
crates/project_inventory/tests/: android_wiring.rs  spring_counts.rs
crates/quality/: Cargo.toml
crates/quality/src/: complexity.rs  halstead.rs  i18n.rs  lib.rs  quality_delta.rs  satd.rs  testability.rs
crates/quality_llm/: Cargo.toml
crates/quality_llm/src/: backend.rs  cli_backend.rs  context.rs  file_pass.rs  flag.rs  holistic_pass.rs  lib.rs  parse.rs  persist.rs  prefilter.rs  repo_path.rs  rubric.rs
crates/quality_llm/tests/: file_pass_pb.rs  holistic_pc.rs  (+3 more)
crates/report/: Cargo.toml
crates/static_analysis/: Cargo.toml
crates/survival/: Cargo.toml
(+178 files in other folders)
