[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/collect", "crates/survival", "crates/compile_stage", "crates/analyze", "crates/evaluate", "crates/evaluate_local", "crates/quality", "crates/process_stage", "crates/curriculum", "crates/repo_analysis", "crates/ai_detect", "crates/architecture", "crates/architecture_llm", "crates/report", "crates/orchestration", "crates/blackbox", "crates/static_analysis"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
tempfile = "3"
camino = "1"
