[package]
name = "sprint-grader-ai-detect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite.workspace = true
regex = "1"
fancy-regex = "0.13"
once_cell = "1"
walkdir = "2"
sprint-grader-core = { path = "../core" }
sprint-grader-curriculum = { path = "../curriculum" }
