[package]
name = "sprint-grader-architecture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
rusqlite.workspace = true
walkdir = "2"
regex = "1.10"
once_cell = "1"
sha2 = "0.10"
tree-sitter = "0.25"
tree-sitter-java = "0.23"
sprint-grader-core = { path = "../core" }
sprint-grader-survival = { path = "../survival" }

[dev-dependencies]
tempfile.workspace = true
