[package]
name = "sprint-grader-architecture-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite.workspace = true
walkdir = "2"
sha2 = "0.10"
sprint-grader-core = { path = "../core" }
sprint-grader-architecture = { path = "../architecture" }
sprint-grader-evaluate = { path = "../evaluate" }

[dev-dependencies]
tempfile.workspace = true
