[package]
name = "sprint-grader-compile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite.workspace = true
sprint-grader-core = { path = "../core" }
regex = "1.10"
rayon = "1.10"
tempfile = "3.10"
wait-timeout = "0.2"
once_cell = "1"
