[package]
name = "sprint-grader-curriculum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
regex = "1"
once_cell = "1"
walkdir = "2"
sprint-grader-core = { path = "../core" }
