[package]
name = "sprint-grader-estimation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
chrono.workspace = true
sprint-grader-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
