[package]
name = "sprint-grader-evaluate-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sprint-grader-core = { path = "../core" }
sprint-grader-evaluate = { path = "../evaluate" }

[dev-dependencies]
tempfile.workspace = true
