[package]
name = "grade_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure grading engine: task shaping, aggregation, and formula evaluation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"
serde = { workspace = true }
sprint-grader-core = { path = "../core" }
