[package]
name = "grade_core_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings for grade_core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grade_core = { path = "../grade_core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
