[package]
name = "grade_xlsx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
grade_core = { path = "../grade_core" }
rust_xlsxwriter = "0.94"

[dev-dependencies]
tempfile.workspace = true
