[package]
name = "sprint-grader-grading-html"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tempfile.workspace = true
base64 = "0.22"
sprint-grader-core = { path = "../core" }
sprint-grader-grading-xlsx = { path = "../grading_xlsx" }

[features]
default = []
# Gates the Node-dependent parity / jsdom tests added in Phases 3–4 so the
# standard `cargo test --workspace` needs no Node toolchain.
node-tests = []
