[package]
name = "sprint-grader-grading-xlsx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
sha2 = "0.10"
calamine = "0.26"
rust_xlsxwriter = "0.94"
sprint-grader-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
