[package]
name = "sprint-grader-orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
rayon = "1"
sha2 = "0.10"
sprint-grader-core = { path = "../core" }
sprint-grader-collect = { path = "../collect" }
sprint-grader-survival = { path = "../survival" }
sprint-grader-compile = { path = "../compile_stage" }
sprint-grader-analyze = { path = "../analyze" }
sprint-grader-evaluate = { path = "../evaluate" }
sprint-grader-quality = { path = "../quality" }
sprint-grader-process = { path = "../process_stage" }
sprint-grader-ai-detect = { path = "../ai_detect" }
sprint-grader-repo-analysis = { path = "../repo_analysis" }
sprint-grader-report = { path = "../report" }

[dev-dependencies]
tempfile.workspace = true
