[package]
name = "sprint-grader-static-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
rusqlite.workspace = true
sha1 = "0.10"
chrono.workspace = true
once_cell = "1"
tempfile.workspace = true
camino.workspace = true
sprint-grader-core = { path = "../core" }
sprint-grader-survival = { path = "../survival" }
tree-sitter = "0.25"
tree-sitter-java = "0.23"
