[package]
name = "sprint-grader-survival"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite.workspace = true
sprint-grader-core = { path = "../core" }
tree-sitter = "0.25"
tree-sitter-java = "0.23"
tree-sitter-xml = "0.7"
regex = "1.10"
fancy-regex = "0.13"
sha2 = "0.10"
hex = "0.4"
rayon = "1.10"
once_cell = "1"

[dev-dependencies]
# Fixtures live in tests/ to mirror the Python layout
